# ddp-esphome

./: .gitignore  CHANGELOG.md  DDP-MDNS-DISCOVERY.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release-drafter.yml
esphome/components/ddp/: __init__.py  ddp.cpp  ddp.h  ddp_light_effect.cpp  ddp_light_effect.h  ddp_monochromatic_light_effect.cpp  ddp_monochromatic_light_effect.h  ddp_pixel_convert.h  ddp_renderer.h
esphome/components/ddp_canvas/: __init__.py  ddp_canvas.cpp  ddp_canvas.h
esphome/components/ddp_stream/: __init__.py  ddp_stream.cpp  ddp_stream.h
esphome/components/media_proxy_control/: __init__.py  automation.h  media_proxy_control.cpp  media_proxy_control.h
esphome/components/ws_ddp_control/: __init__.py  ws_ddp_control.cpp  ws_ddp_control.h
esphome/examples/: ddp-receiver-only.yaml  ddp-test-canvas.yaml  ddp-test-light-mono.yaml  ddp-test-light-rgb.yaml  ddp-test-light-rgbw.yaml  ddp-test-multi-renderer.yaml  ddp-websocket-full.yaml  media-proxy-canvas.yaml  page-ddp-stream.yaml
server/: constraints.txt  requirements.txt  server.py
