[project]
name = "ddp-esphome"
version = "0.7.5"
description = "ESPHome external components for streaming images/video to LVGL displays and LED strips via DDP (Distributed Display Protocol)"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "clang-format>=19.0.0",
    "clang-tidy>=19.0.0",
]
